--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@medusajs/medusa-js": "^1.0.3",
-    "@stripe/react-stripe-js": "^1.4.1",
-    "@stripe/stripe-js": "^1.15.1",
-    "axios": "^0.21.3",
-    "formik": "^2.2.9",
-    "next": "^11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.2.0",
-    "react-spinners": "^0.11.0",
-    "yup": "^0.32.9"
+    "@medusajs/medusa-cli": "1.3.21",
+    "@medusajs/medusa-js": "^6.1.3",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.10",
+    "axios": "^1.6.0",
+    "formik": "^2.4.5",
+    "next": "^14.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-spinners": "^0.13.8",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
-    "eslint": "7.29.0",
-    "eslint-config-next": "11.0.0"
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^14.0.0"
   }
 }
