--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stripe/stripe-js": "^2.1.10",
     "axios": "^1.6.0",
     "formik": "^2.4.5",
+    "medusa-plugin-algolia": "^0.2.20",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
